--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lodash": "4.17.11",
     "react": "16.8.3",
     "react-dom": "16.8.3",
+    "react-highcharts": "16.0.2",
     "react-scripts": "2.1.8",
     "styled-components": "4.1.3"
   },
@@ -22,5 +23,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
